// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListWithPagination renders in grid mode 1`] = `
<List
  bordered={false}
  dataSource={Array []}
  footer={
    <Pagination
      className="ant-col-24"
      current={1}
      hideOnSinglePage={true}
      loading={false}
      onChange={[MockFunction]}
      pageSize={50}
      showTotal={[Function]}
      total={100}
    />
  }
  grid={
    Object {
      "gutter": 16,
      "lg": 3,
      "sm": 2,
      "xl": 4,
      "xs": 1,
    }
  }
  header={null}
  loading={false}
  pagination={false}
  split={true}
>
  <div
    className="ant-row-flex"
  >
    <Item
      key="1"
    >
      1
    </Item>
    <Item
      key="2"
    >
      2
    </Item>
    <Item
      key="3"
    >
      3
    </Item>
    <Item
      key="4"
    >
      4
    </Item>
    <Item
      key="5"
    >
      5
    </Item>
    <Item
      key="6"
    >
      6
    </Item>
    <Item
      key="7"
    >
      7
    </Item>
    <Item
      key="8"
    >
      8
    </Item>
    <Item
      key="9"
    >
      9
    </Item>
    <Item
      key="10"
    >
      10
    </Item>
    <Item
      key="11"
    >
      11
    </Item>
    <Item
      key="12"
    >
      12
    </Item>
    <Item
      key="13"
    >
      13
    </Item>
    <Item
      key="14"
    >
      14
    </Item>
    <Item
      key="15"
    >
      15
    </Item>
    <Item
      key="16"
    >
      16
    </Item>
    <Item
      key="17"
    >
      17
    </Item>
    <Item
      key="18"
    >
      18
    </Item>
    <Item
      key="19"
    >
      19
    </Item>
    <Item
      key="20"
    >
      20
    </Item>
    <Item
      key="21"
    >
      21
    </Item>
    <Item
      key="22"
    >
      22
    </Item>
    <Item
      key="23"
    >
      23
    </Item>
    <Item
      key="24"
    >
      24
    </Item>
  </div>
</List>
`;

exports[`ListWithPagination renders with all props 1`] = `
<List
  bordered={false}
  dataSource={Array []}
  footer={
    <Pagination
      className=""
      current={2}
      hideOnSinglePage={true}
      loading={true}
      onChange={[MockFunction]}
      pageSize={25}
      showTotal={[Function]}
      total={100}
    />
  }
  header="Test"
  loading={false}
  pagination={false}
  split={true}
>
  <div
    className=""
  >
    <Item
      key="1"
    >
      1
    </Item>
    <Item
      key="2"
    >
      2
    </Item>
    <Item
      key="3"
    >
      3
    </Item>
    <Item
      key="4"
    >
      4
    </Item>
    <Item
      key="5"
    >
      5
    </Item>
    <Item
      key="6"
    >
      6
    </Item>
    <Item
      key="7"
    >
      7
    </Item>
    <Item
      key="8"
    >
      8
    </Item>
    <Item
      key="9"
    >
      9
    </Item>
    <Item
      key="10"
    >
      10
    </Item>
    <Item
      key="11"
    >
      11
    </Item>
    <Item
      key="12"
    >
      12
    </Item>
    <Item
      key="13"
    >
      13
    </Item>
    <Item
      key="14"
    >
      14
    </Item>
    <Item
      key="15"
    >
      15
    </Item>
    <Item
      key="16"
    >
      16
    </Item>
    <Item
      key="17"
    >
      17
    </Item>
    <Item
      key="18"
    >
      18
    </Item>
    <Item
      key="19"
    >
      19
    </Item>
    <Item
      key="20"
    >
      20
    </Item>
    <Item
      key="21"
    >
      21
    </Item>
    <Item
      key="22"
    >
      22
    </Item>
    <Item
      key="23"
    >
      23
    </Item>
    <Item
      key="24"
    >
      24
    </Item>
  </div>
</List>
`;

exports[`ListWithPagination renders with required props 1`] = `
<List
  bordered={false}
  dataSource={Array []}
  footer={
    <Pagination
      className=""
      current={1}
      hideOnSinglePage={true}
      loading={false}
      onChange={[MockFunction]}
      pageSize={50}
      showTotal={[Function]}
      total={100}
    />
  }
  header={null}
  loading={false}
  pagination={false}
  split={true}
>
  <div
    className=""
  >
    <Item
      key="0"
    >
      0
    </Item>
    <Item
      key="1"
    >
      1
    </Item>
    <Item
      key="2"
    >
      2
    </Item>
    <Item
      key="3"
    >
      3
    </Item>
    <Item
      key="4"
    >
      4
    </Item>
    <Item
      key="5"
    >
      5
    </Item>
    <Item
      key="6"
    >
      6
    </Item>
    <Item
      key="7"
    >
      7
    </Item>
    <Item
      key="8"
    >
      8
    </Item>
    <Item
      key="9"
    >
      9
    </Item>
    <Item
      key="10"
    >
      10
    </Item>
    <Item
      key="11"
    >
      11
    </Item>
    <Item
      key="12"
    >
      12
    </Item>
    <Item
      key="13"
    >
      13
    </Item>
    <Item
      key="14"
    >
      14
    </Item>
    <Item
      key="15"
    >
      15
    </Item>
    <Item
      key="16"
    >
      16
    </Item>
    <Item
      key="17"
    >
      17
    </Item>
    <Item
      key="18"
    >
      18
    </Item>
    <Item
      key="19"
    >
      19
    </Item>
    <Item
      key="20"
    >
      20
    </Item>
    <Item
      key="21"
    >
      21
    </Item>
    <Item
      key="22"
    >
      22
    </Item>
    <Item
      key="23"
    >
      23
    </Item>
    <Item
      key="24"
    >
      24
    </Item>
  </div>
</List>
`;
